src/test/ui/issues/issue-31910.stderr
error[E0308]: mismatched types
  --> $DIR/issue-31910.rs:2:9
   |
LL |     X = Trait::Number,
   |         ^^^^^^^^^^^^^ expected isize, found i32
help: you can convert an `i32` to `isize` and panic if the converted value wouldn't fit
   |
LL |     X = Trait::Number.try_into().unwrap(),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
